--- a/app/views/allocations/_allocate_primary_pom.html.erb
+++ b/app/views/allocations/_allocate_primary_pom.html.erb
@@ -1,19 +1,24 @@
-<li class="action_needed">
-  <h2 class="govuk-heading-s">Prisoner allocation</h2>
-<p>Prisoner allocated to <%= pom_name.titleize %>
-  - <%= format_email(@pom_emails[pom_nomis_id]) %>
-  <br/>
-  Tier: <%= allocation.allocated_at_tier %></p>
-  <% if allocation.override_reasons.present? %>
-    <p class="govuk-body govuk-!-margin-bottom-1">
-      <%= display_override_pom(allocation) %></p>
-    <p class="govuk-body govuk-!-margin-bottom-1">Reason(s):</p>
-    <% allocation.override_reasons.each do | reason| %>
-      <%= display_override_details(reason, allocation) %>
+<div class="moj-timeline__item">
+  <div class="moj-timeline__header">
+    <h2 class="moj-timeline__title">Prisoner allocation</h2>
+  </div>
+
+  <div class="moj-timeline__description">Prisoner allocated to <%= pom_name.titleize %>
+    - <%= format_email(@pom_emails[pom_nomis_id]) %>
+    <br/>
+    Tier: <%= allocation.allocated_at_tier %>
+    <% if allocation.override_reasons.present? %>
+      <p class="govuk-body govuk-!-margin-bottom-1"><%= display_override_pom(allocation) %></p>
+      <p class="govuk-body govuk-!-margin-bottom-1">Reason(s):</p>
+      <% allocation.override_reasons.each do | reason| %>
+        <%= display_override_details(reason, allocation) %>
+      <% end %>
     <% end %>
-  <% end %>
-<p class="time"><%= format_date_long(allocation.updated_at) %>
-  <% if allocation.created_by_name.present? %>
-    by <%= allocation.created_by_name.titleize %></p>
-  <% end %>
-</li>
+  </div>
+
+  <p class="moj-timeline__date"><%= format_date_long(allocation.updated_at) %>
+    <% if allocation.created_by_name.present? %>
+      by <%= allocation.created_by_name.titleize %>
+    <% end %>
+  </p>
+</div>
