--- a/app/views/allocations/_allocate_secondary_pom.html.erb
+++ b/app/views/allocations/_allocate_secondary_pom.html.erb
@@ -1,12 +1,16 @@
-<li class="action_needed">
-  <h2 class="govuk-heading-s">Co-working allocation</h2>
-<p>Prisoner allocated to <%= pom_name.titleize %>
-  - <%= format_email(@pom_emails[pom_nomis_id]) %>
-  <br/>
-</p>
-<p class="time"><%= format_date_long(allocation.updated_at) %>
-  <% if allocation.created_by_name.present? %>
-    by <%= allocation.created_by_name.titleize %>
-  <% end %>
-</p>
-</li>
+<div class="moj-timeline__item">
+  <div class="moj-timeline__header">
+    <h2 class="moj-timeline__title">Co-working allocation</h2>
+  </div>
+
+  <div class="moj-timeline__description">Prisoner allocated to <%= pom_name.titleize %>
+    - <%= format_email(@pom_emails[pom_nomis_id]) %>
+    <br/>
+  </div>
+
+  <p class="moj-timeline__date"><%= format_date_long(allocation.updated_at) %>
+    <% if allocation.created_by_name.present? %>
+      by <%= allocation.created_by_name.titleize %>
+    <% end %>
+  </p>
+</div>
