--- a/app/views/allocations/_deallocate_pom.html.erb
+++ b/app/views/allocations/_deallocate_pom.html.erb
@@ -1,16 +1,19 @@
-<li class="action_needed">
-  <h2 class="govuk-heading-s"><%= allocation_type %> unallocated
-    <% if allocation.event_trigger == 'offender_transferred' %>
+<div class="moj-timeline__item">
+  <div class="moj-timeline__header">
+    <h2 class="moj-timeline__title"><%= allocation_type %> unallocated
+      <% if allocation.event_trigger == 'offender_transferred' %>
         (transfer)
-    <% end %>
-  </h2>
-  <p>
+      <% end %>
+    </h2>
+  </div>
+
+  <div class="moj-timeline__description">
     <% unless allocation.event_trigger == 'offender_transferred' %>
       Prisoner unallocated <%= allocation_type == 'Co-working' ? 'co-working POM ' : 'POM ' %>
     <%= pom_name.titleize %> - <%= format_email(@pom_emails[pom_id]) %>
     <% end %>
-  </p>
+  </div>
   <br/>
 &nbsp;
-  <p class="time"><%= format_date_long(allocation.updated_at) %></p>
-</li>
+  <p class="moj-timeline__date"><%= format_date_long(allocation.updated_at) %></p>
+</div>
