--- a/app/views/allocations/_reallocate_primary_pom.html.erb
+++ b/app/views/allocations/_reallocate_primary_pom.html.erb
@@ -1,11 +1,17 @@
-<li class="action_needed">
-  <h2 class="govuk-heading-s">Prisoner reallocated</h2>
-  <p>Prisoner reallocated to <%= pom_name.titleize %>
+<div class="moj-timeline__item">
+  <div class="moj-timeline__header">
+    <h2 class="moj-timeline__title">Prisoner reallocated</h2>
+  </div>
+
+  <div class="moj-timeline__description">Prisoner reallocated to <%= pom_name.titleize %>
       - <%= format_email(@pom_emails[pom_nomis_id]) %>
     <br/>
     Tier: <%= allocation.allocated_at_tier %>
-  <p class="time"><%= format_date_long(allocation.updated_at) %>
+  </div>
+
+  <p class="moj-timeline__date"><%= format_date_long(allocation.updated_at) %>
     <% if allocation.created_by_name.present? %>
-      by <%= allocation.created_by_name.titleize %></p>
+      by <%= allocation.created_by_name.titleize %>
     <% end %>
-</li>
+  </p>
+</div>
