Change where responsibility if calculated for AllocatedOffenders
Rather than clog up the PomCaseload with checks that it doesn't need to
know about, moves the determination of POM responsibility for that
offender to the AllocatedOffender class.

Also renames responsibility to pom_responsibility (as we are returning
RESPONSIBLE, SUPPORTING, or COWORKING) rather than responsibility which
implies (Custody/Community).

--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -81,10 +81,10 @@
         <%= sort_arrow('primary_pom_allocated_at') %>
       </th>
       <th class="govuk-table__header" scope="col">
-        <a href="<%= sort_link('responsibility') %>">
+        <a href="<%= sort_link('pom_responsibility') %>">
           Role
         </a>
-        <%= sort_arrow('responsibility') %>
+        <%= sort_arrow('pom_responsibility') %>
       </th>
       <th class="govuk-table__header" scope="col">Action</th>
     </tr>
@@ -104,7 +104,7 @@
         </td>
         <td aria-label="Release date" class="govuk-table__cell "><%= format_date(offender.earliest_release_date) %></td>
         <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(offender.primary_pom_allocated_at) %></td>
-        <td aria-label="Role" class="govuk-table__cell "><%= offender.responsibility %></td>
+        <td aria-label="Role" class="govuk-table__cell "><%= offender.pom_responsibility %></td>
         <td aria-label="Action" class="govuk-table__cell ">
           <%= link_to('View', prison_prisoner_path(@prison.code, offender.nomis_offender_id), class: "govuk-link" ) %>
         </td>
