--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -33,10 +33,10 @@
         <%= sort_arrow('primary_pom_allocated_at') %>
       </th>
       <th class="govuk-table__header" scope="col">
-        <a href="<%= sort_link('responsibility') %>">
+        <a href="<%= sort_link('pom_responsibility') %>">
           Role
         </a>
-        <%= sort_arrow('responsibility') %>
+        <%= sort_arrow('pom_responsibility') %>
       </th>
     </tr>
   </thead>
@@ -48,7 +48,7 @@
       <td aria-label="Earliest release date" class="govuk-table__cell "><%= format_date(allocation.earliest_release_date) %></td>
       <td aria-label="Tier" class="govuk-table__cell "><%= allocation.tier %></td>
       <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.primary_pom_allocated_at) %></td>
-      <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
+      <td aria-label="Role" class="govuk-table__cell "><%= allocation.pom_responsibility %></td>
     </tr>
     <% end %>
   </tbody>
