Access to various controllers was not correctly enforced
POMs should not see SPO task links on the dashboard, and we should
ensure the user has the correct role to be able to access those
controllers.

Also changes search so that unless the user is an SPO, they will be
redirected to caseload search instead of the actionable search (which
allows allocating etc).

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -14,6 +14,7 @@
   <%= render "search/search_box" %>
 </div>
 
+<% if @is_spo %>
 <h2 class="govuk-heading-m no-bottom-margin">Allocate a prisoner to an offender manager</h2>
 <hr class="govuk-section-break govuk-section-break--visible">
 <div class="govuk-grid-row dashboard-row">
@@ -42,6 +43,7 @@
     </div>
   </div>
 </div>
+<% end  %>
 
 <% if @is_pom %>
   <h2 class="govuk-heading-m no-bottom-margin">Manage cases</h2>
@@ -85,17 +87,19 @@
 
 <% end %>
 
-<h2 class="govuk-heading-m no-bottom-margin">Manage staff</h2>
-<hr class="govuk-section-break govuk-section-break--visible">
-<div class="govuk-grid-row dashboard-row">
-  <div class="govuk-grid-column-one-third">
-    <div class="wrapper">
-      <h1 class="govuk-heading-s">
-        <%= link_to "View all offender managers", prison_poms_path(@prison.code), class:"govuk-link" %>
-      </h1>
-      <p class="govuk-body">Check and edit availability of offender managers.</p>
+<% if @is_spo %>
+  <h2 class="govuk-heading-m no-bottom-margin">Manage staff</h2>
+  <hr class="govuk-section-break govuk-section-break--visible">
+  <div class="govuk-grid-row dashboard-row">
+    <div class="govuk-grid-column-one-third">
+      <div class="wrapper">
+        <h1 class="govuk-heading-s">
+          <%= link_to "View all offender managers", prison_poms_path(@prison.code), class:"govuk-link" %>
+        </h1>
+        <p class="govuk-body">Check and edit availability of offender managers.</p>
+      </div>
     </div>
+    <div class="govuk-grid-column-one-third"></div>
+    <div class="govuk-grid-column-one-third"></div>
   </div>
-  <div class="govuk-grid-column-one-third"></div>
-  <div class="govuk-grid-column-one-third"></div>
-</div>
+<% end %>
