--- a/app/views/prisoners/_allocation_info.html.erb
+++ b/app/views/prisoners/_allocation_info.html.erb
@@ -1,36 +1,24 @@
-<table class="govuk-table govuk-!-margin-top-8">
-  <tbody class="govuk-table__body">
-  <tr class="govuk-table__row">
-    <td class="govuk-table__header" scope="row">Allocation</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Prisoner allocation</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Current responsibility</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  <tr class="govuk-table__srow">
-    <td class="govuk-table__cell hmpps-table-cell__key">Keyworker</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Primary POM</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Secondary POM</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">COM</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Local Divisional Unit (LDU)</td>
-    <td class="govuk-table__cell table_cell__left_align"></td>
-  </tr>
-  </tbody>
-</table>
+<tr class="govuk-table__row">
+  <td class="govuk-table__cell">POM</td>
+  <td class="govuk-table__cell table_cell__left_align">
+    <%= allocation.primary_pom_name.titleize %>
+  </td>
+</tr>
+<tr class="govuk-table__row">
+  <td class="govuk-table__cell">Co-working POM</td>
+  <td class="govuk-table__cell table_cell__left_align">
+    <% if allocation.secondary_pom_name.present? %>
+      <%= allocation.secondary_pom_name.titleize %>
+    <% else %>
+      N/A
+    <% end %>
+  </td>
+</tr>
+
+<tr class="govuk-table__row">
+  <td class="govuk-table__cell">Allocation history</td>
+  <td class="govuk-table__cell table_cell__left_align">
+    <%= last_event(allocation) %>
+    <%= link_to 'View', prison_allocation_history_path(allocation.prison, allocation.nomis_offender_id), class: "govuk-link pull-right" %>
+  </td>
+</tr>
