--- a/app/views/prisoners/_prison_allocation.html.erb
+++ b/app/views/prisoners/_prison_allocation.html.erb
@@ -10,33 +10,7 @@
         <%= @pom_responsibility %>
       </td>
     </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">POM</td>
-      <td class="govuk-table__cell table_cell__left_align">
-        <% if @allocation && @allocation.primary_pom_name.present? %>
-          <%= @allocation.primary_pom_name.titleize %>
-        <% end %>
-      </td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Co-working POM</td>
-      <td class="govuk-table__cell table_cell__left_align">
-        <% if @allocation.secondary_pom_name.present? %>
-          <%= @allocation.secondary_pom_name.titleize %>
-        <% else %>
-          N/A
-        <% end %>
-      </td>
-    </tr>
-
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Allocation history</td>
-      <td class="govuk-table__cell table_cell__left_align">
-        <%= last_event(@allocation) %>
-        <%= link_to 'View', prison_allocation_history_path(@allocation.prison, @allocation.nomis_offender_id), class: "govuk-link pull-right" %>
-      </td>
-    </tr>
-
+    <%= render 'allocation_info', allocation: @allocation if @allocation.present? %>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Keyworker</td>
       <td class="govuk-table__cell table_cell__left_align">
