--- a/app/views/shared/_validation_errors.html.erb
+++ b/app/views/shared/_validation_errors.html.erb
@@ -7,7 +7,7 @@
     <ul class="govuk-list govuk-error-summary__list">
       <% errors.messages.each do |_field, message| %>
       <li>
-          <%= message.first %>
+          <%= link_to(message.first, url_path) %>
       </li>
       <% end %>
     </ul>
