Contact us errors conforms to GDS style guidelines.
We no longer uses the shared/validation_errors

It was not possible to test the errors due to unpermitted params,
fixed this by adding the additional parameters when in test and
development.

Disabled turbolinks when linking to anchors as this stops the
page from being refreshed and losing the error messages.

--- a/app/views/shared/_validation_errors.html.erb
+++ b/app/views/shared/_validation_errors.html.erb
@@ -5,10 +5,10 @@
   </h2>
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
-      <% errors.messages.each do |_field, message| %>
-      <li>
-          <%= link_to(message.first, url_path) %>
-      </li>
+      <% errors.messages.each_with_index do |(_field, message), index| %>
+        <li>
+          <%= link_to(message.first, url_path[index]) %>
+        </li>
       <% end %>
     </ul>
   </div>
