--- a/app/views/poms/_probation_poms_table.html.erb
+++ b/app/views/poms/_probation_poms_table.html.erb
@@ -13,7 +13,7 @@
   </tr>
   </thead>
   <tbody class="govuk-table__body">
-  <% poms.select{ |pom| pom.position.include?('PO')}.each_with_index do |pom, i| %>
+  <% poms.select(&:probation_officer?).each_with_index do |pom, i| %>
     <tr class="govuk-table__row probation_pom_row_<%= i %>">
       <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
       <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
