--- a/app/views/case_information/new.html.erb
+++ b/app/views/case_information/new.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Back", 'javascript:history.back()', class: "govuk-back-link govuk-!-margin-top-0 govuk-!-margin-bottom-6" %>
 
 <% if @case_info.errors.count > 0 %>
-  <%= render :partial => "/shared/validation_errors", :locals => { :errors => @case_info.errors } %>
+  <%= render :partial => "errors", :locals => { :errors => @case_info.errors } %>
 <% end %>
 
 <h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-4">Case information</h1>
