--- a/app/views/responsibilities/new.html.erb
+++ b/app/views/responsibilities/new.html.erb
@@ -3,19 +3,41 @@
 <% end %>
 
 <% if @responsibility.errors.count > 0 %>
-  <%= render :partial => "/shared/validation_errors", :locals => { :errors => @responsibility.errors } %>
+  <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+    <h2 class="govuk-error-summary__title" id="error-summary-title">
+      There is a problem
+    </h2>
+    <div class="govuk-error-summary__body">
+      <ul class="govuk-list govuk-error-summary__list">
+        <% if @responsibility.errors[:reason] %>
+          <li><a href="#reason_less_10"><%= @responsibility.errors[:reason].first %></a></li>
+        <% end %>
+
+        <% if @responsibility.errors[:reason_text] %>
+          <li><a href="#other_reason_text"><%= @responsibility.errors[:reason_text].first %></a></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 <% end %>
 
 <%= form_for(@responsibility, url: confirm_prison_responsibilities_path(@prison.code, @responsibility)) do |f| %>
   <%= f.hidden_field(:nomis_offender_id) %>
 
-  <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-        <h1 class="govuk-fieldset__heading">
-          Why are you changing responsibility for this case?
-        </h1>
+  <h1 class="govuk-heading-xl govuk-!-margin-top-4">
+    Why are you changing responsibility for this case?
+  </h1>
+
+  <div class="govuk-form-group <% if @responsibility.errors[:reason].present? %>govuk-form-group--error<% end %>">
+    <fieldset class="govuk-fieldset" aria-describedby="responsibility-reason-hint">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-margin-bottom-4">
+        <h1 class="govuk-fieldset__heading">Select one option:</h1>
       </legend>
+
+      <span id="responsibility-error" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span> <%= @responsibility.errors[:reason].first %>
+      </span>
+
       <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="reason_less_10" name="responsibility[reason]" type="radio" value="less_than_10_months_to_serve">
