Tiny content update to tasks view

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
   <% if @pomtasks.blank? %>
   There are no case updates needed
   <% else %>
-  Case updated needed
+  Case updates needed
   <% end %>
 </h1>
 
