--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -28,13 +28,13 @@
                          :locals => { allocation: allocation,
                                       allocation_type: 'Prisoner',
                                       pom_name: allocations[i + 1].primary_pom_name,
-                                      pom_id: allocations[i + 1].primary_pom_nomis_id }%>
+                                      pom_email: @pom_emails[allocations[i + 1].primary_pom_nomis_id] }%>
             <% elsif allocation.event == 'deallocate_secondary_pom' %>
               <%= render :partial => "deallocate_pom",
                          :locals => { allocation: allocation,
                                       allocation_type: 'Co-working',
                                       pom_name: allocations[i + 1].secondary_pom_name,
-                                      pom_id: allocations[i + 1].secondary_pom_nomis_id } %>
+                                      pom_email: @pom_emails[allocations[i + 1].secondary_pom_nomis_id] } %>
             <% end %>
           <% end %>
       </div>
