We are now using the shared/field_errors partial for displaying error messages, and as such the anchor id's that the error messages link to in the view have been standardised to match the error fields.
Noticed that some of the error messages were not displayed in the order that
the fields that appear in the form, which could be confusing. So the ordering
of the validation in some models have been changed to match the order that the
fields appear in the forms.

--- a/app/views/case_information/_form.html.erb
+++ b/app/views/case_information/_form.html.erb
@@ -21,7 +21,7 @@
 
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <%= radio_button_tag("case_information[welsh_offender]", 'Yes', @case_info.welsh_offender == 'Yes', class: "govuk-radios__input") %>
+            <%= radio_button_tag("case_information[welsh_offender]", 'Yes', @case_info.welsh_offender == 'Yes', class: "govuk-radios__input", id: 'welsh_offender') %>
             <%= label_tag "case_information[welsh_offender]", 'Yes', class: "govuk-label govuk-radios__label" %>
           </div>
           <div class="govuk-radios__item">
@@ -45,7 +45,7 @@
 
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <%= radio_button_tag("case_information[case_allocation]", "NPS", @case_info.case_allocation == 'NPS', class: "govuk-radios__input") %>
+            <%= radio_button_tag("case_information[case_allocation]", "NPS", @case_info.case_allocation == 'NPS', class: "govuk-radios__input", id: 'case_allocation') %>
             <%= label_tag "case_information[case_allocation]", "National Probation Service (NPS)", class: "govuk-label govuk-radios__label" %>
           </div>
           <div class="govuk-radios__item">
@@ -70,7 +70,7 @@
 
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <%= radio_button_tag("case_information[tier]", "A", @case_info[:tier] == 'A', class: "govuk-radios__input") %>
+          <%= radio_button_tag("case_information[tier]", "A", @case_info[:tier] == 'A', class: "govuk-radios__input", id: 'tier') %>
           <%= label_tag "case_information[tier]", "A", class: "govuk-label govuk-radios__label" %>
         </div>
         <div class="govuk-radios__item">
