--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -23,34 +23,7 @@
 <div class="govuk-grid-row dashboard-row">
   <div class="govuk-grid-column-two-thirds">
     <% if @contact.errors.count > 0 %>
-      <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
-        <h2 class="govuk-error-summary__title" id="error-summary-title">
-          There is a problem
-        </h2>
-        <div class="govuk-error-summary__body">
-          <ul class="govuk-list govuk-error-summary__list">
-            <% if @contact.errors[:name] %>
-              <li><a href="#name" data-turbolinks="false"><%= @contact.errors[:name].first %></a></li>
-            <% end %>
-
-            <% if @contact.errors[:email_address] %>
-              <li><a href="#email_address" data-turbolinks="false"><%= @contact.errors[:email_address].first %></a></li>
-            <% end %>
-
-            <% if @contact.errors[:job_type] %>
-              <li><a href="#job_type" data-turbolinks="false"><%= @contact.errors[:job_type].first %></a></li>
-            <% end %>
-
-            <% if @contact.errors[:prison] %>
-              <li><a href="#prison" data-turbolinks="false"><%= @contact.errors[:prison].first %></a></li>
-            <% end %>
-
-            <% if @contact.errors[:message] %>
-              <li><a href="#message" data-turbolinks="false"><%= @contact.errors[:message].first %></a></li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
+      <%= render partial: 'shared/field_errors', :locals => { :errors => @contact.errors, :disable_refresh => true } %>
     <% end %>
   </div>
 
