--- a/app/views/responsibilities/new.html.erb
+++ b/app/views/responsibilities/new.html.erb
@@ -3,22 +3,7 @@
 <% end %>
 
 <% if @responsibility.errors.count > 0 %>
-  <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
-    <h2 class="govuk-error-summary__title" id="error-summary-title">
-      There is a problem
-    </h2>
-    <div class="govuk-error-summary__body">
-      <ul class="govuk-list govuk-error-summary__list">
-        <% if @responsibility.errors[:reason] %>
-          <li><a href="#reason_less_10"><%= @responsibility.errors[:reason].first %></a></li>
-        <% end %>
-
-        <% if @responsibility.errors[:reason_text] %>
-          <li><a href="#other_reason_text"><%= @responsibility.errors[:reason_text].first %></a></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
+  <%= render partial: 'shared/field_errors', :locals => { :errors => @responsibility.errors } %>
 <% end %>
 
 <%= form_for(@responsibility, url: confirm_prison_responsibilities_path(@prison.code, @responsibility)) do |f| %>
@@ -40,7 +25,7 @@
 
       <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="reason_less_10" name="responsibility[reason]" type="radio" value="less_than_10_months_to_serve">
+          <input class="govuk-radios__input" id="reason" name="responsibility[reason]" type="radio" value="less_than_10_months_to_serve">
           <label class="govuk-label govuk-radios__label" for="reason_less_10">
             The prisoner has less than 10 months less to serve
           </label>
@@ -70,17 +55,17 @@
               <%= @responsibility.errors[:reason_text].first %>
             </span>
           <% end %>
-          <div class="govuk-form-group">
+          <div class="govuk-form-group<%='--error' if @responsibility.errors[:reason_text].present? %>">
             <label class="govuk-label" for="other_reason_text">
               Enter reason
             </label>
-            <input class="govuk-input govuk-!-width-one-third<%= ' govuk-textarea--error' if @responsibility.errors[:reason_text].present? %>" id="other_reason_text" name="responsibility[reason_text]">
+            <input class="govuk-input govuk-!-width-one-third<%= ' govuk-textarea--error' if @responsibility.errors[:reason_text].present? %>" id="reason_text" name="responsibility[reason_text]">
           </div>
         </div>
+
       </div>
     </fieldset>
   </div>
-
   <div class="govuk-form-group">
     <button type="submit" class="govuk-button">Continue</button>
     <%= link_to 'Cancel', new_prison_allocation_path(@prison.code, @responsibility.nomis_offender_id), class: 'govuk-link cancel-button' %>
