Show 'new arrivals' in summary
As per POM-450 this PR adds a new summary type (:new_arrivals) to the
summary, which is "offenders that would be in missing information if
they have been waiting more than 2 days".  To achieve this means we need
to include the arrival date for all offenders in all summary_types so
that we can calculate totals. This is not ideal.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -43,6 +43,18 @@
     </div>
   </div>
 </div>
+
+<div class="govuk-grid-row dashboard-row">
+  <div class="govuk-grid-column-one-third">
+    <div class="wrapper">
+      <h1 class="govuk-heading-s">
+        <%= link_to "Newly arrived", prison_summary_new_arrivals_path(@prison.code), class:"govuk-link" %>
+      </h1>
+      <p class="govuk-body">Prisoners whose case information has not yet been matched with nDelius.</p>
+    </div>
+  </div>
+</div>
+
 <% end  %>
 
 <% if @is_pom %>
